--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -80,48 +80,17 @@ ptm <- proc.time()
 ```
 
 
-```{r setup, include=FALSE, size="huge"}
-message("Loading knitr library")
-if (!require("knitr", quietly = TRUE)) {
-  message("Installing knitr library")
-  install.packages("knitr", dependencies = TRUE)
-}
-require(knitr)
-
-## Default parameters for displaying the slides
-knitr::opts_chunk$set(
-  echo = TRUE, 
-  eval = TRUE, 
-  fig.width = 7, 
-  fig.height = 5, 
-  fig.align = "center", 
-#  fig.path = file.path("figures", paste0(parameters$query, "_")),
-  size = "tiny", 
-  warning = FALSE, 
-  results = TRUE, 
-  message = FALSE, 
-  comment = "")
-
-## Load custom functions
-R.files <- list.files(path = "R/",pattern = "*.R", full.names = TRUE)
-for (file in R.files) {
-  source(file)
-}
-
-```
-
-  
 
 ```{r parameters, echo=FALSE}
 
 ## Define user-specified parameters for the analyses
 ## Parameters
 parameters <- list(
-  query =  "EFO_0001068", # malaria
-  #query = "EFO_0001360", # type ii diabetes mellitus
+  # query =  "EFO_0001068", # malaria
+  query =  "EFO_0008407", # tuberculosis
   # query = "HP_0100806", # sepsis
   #query = "EFO_0000249", # Alzheimer's disease
-  #query =  "EFO_0008407", # tuberculosis
+  #query = "EFO_0001360", # type ii diabetes mellitus
   trait = NA,
   ld.pop.prefix = "1000GENOMES:phase_3:",
   # population = "AFR",  ## BEWARE, the population should be adapted to the query !
@@ -169,27 +138,57 @@ message("Figures directory\t", parameters$figure.dir)
 dir.create(parameters$figure.dir, showWarnings = FALSE, recursive = TRUE)
 
 ## Set the figures path for the current markdown report
-knitr::opts_chunk$set(
-  fig.path = 
-    file.path(parameters$figure.dir, 
-              paste0(parameters$query, "_")))
+# knitr::opts_chunk$set(
+#   fig.path = 
+#     file.path(parameters$figure.dir, 
+#               paste0(parameters$query, "_")))
 
 ### FOR DEBUG
-knitr::opts_chunk$set(
-  fig.path = 
-    file.path(parameters$result.dir, 
-              paste0("figure_", parameters$query, "_")))
+# knitr::opts_chunk$set(
+#   fig.path = 
+#     file.path(parameters$result.dir, 
+#               paste0("figure_", parameters$query, "_")))
 ### END DEBUG
 
 
 ## Initialise a vector to summarize the results
 workflowSummary <- vector()
 
-
-
 ```
 
 
+```{r setup, include=FALSE, size="huge"}
+message("Loading knitr library")
+if (!require("knitr", quietly = TRUE)) {
+  message("Installing knitr library")
+  install.packages("knitr", dependencies = TRUE)
+}
+require(knitr)
+
+## Default parameters for displaying the slides
+knitr::opts_chunk$set(
+  echo = TRUE, 
+  eval = TRUE, 
+  fig.width = 7, 
+  fig.height = 5, 
+  fig.align = "center", 
+  fig.path = file.path(parameters$figure.dir, paste0(parameters$query, "_")),
+#  fig.path = file.path("figures", paste0(parameters$query, "_")),
+  size = "tiny", 
+  warning = FALSE, 
+  results = TRUE, 
+  message = FALSE, 
+  comment = "")
+
+## Load custom functions
+R.files <- list.files(path = "R/",pattern = "*.R", full.names = TRUE)
+for (file in R.files) {
+  source(file)
+}
+
+```
+
+  
 
 ```{r libraries, include=FALSE,  eval=TRUE, echo=FALSE, warning=FALSE}
 #### Load CRAN packages (install them if required) ####
@@ -860,7 +859,7 @@ kable(head(LdSNPs), caption = paste0(
 
 
 
-```{r ld_snp_plot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". SNPs in linkage disequilibrium (LD).** "), out.width = "80%", fig.width=5, fig.height=8}
+```{r ld_snp_plot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". SNPs in linkage disequilibrium (LD).** "), out.width = "50%", fig.width=5, fig.height=8}
 
 # Draw a barplot of SNPs in LD
 nb.ld.snps <- sort(table(as.vector(LdSNPs$variation1)))
@@ -1051,10 +1050,10 @@ write.table(x = SOIs,
 
 
 
-```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=6, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic feature of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
+```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=10, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic feature of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
 par(mfrow = c(2,2)) 
 par.ori <- par(no.readonly = TRUE)
-par(mar = c(5.1, 8, 3.1, 2.1))
+par(mar = c(5.1, 5.1, 3.1, 2.1))
 
 ## Draw a barplot with the number of LD SNPs per chromosome
 barplot(height = sort(table(snpInfo$chr_name), decreasing = FALSE), 
@@ -1068,6 +1067,9 @@ barplot(height = sort(table(snpInfo$chr_name), decreasing = FALSE),
         cex.names = 1, 
         las = 1)
 
+## Barplot with the distribution of SNPs in different types 
+## of genomic regions  ("consequence type")
+par(mar = c(5.1, 10.1, 3.1, 2.1))
 ld.df <- sort(table(snpInfo$consequence_type_tv),  decreasing = FALSE)
 max.context <- length(ld.df)
 x <- barplot(height = ld.df,
@@ -1084,6 +1086,7 @@ x <- barplot(height = ld.df,
 text(x = ld.df[1:max.context], y = x, labels = ld.df[1:max.context], cex = 0.7, pos = 4)
 
 ## Draw a barplot with the number of disease-associated SNPs per chromosome
+par(mar = c(5.1, 5.1, 3.1, 2.1))
 barplot(height = sort(table(SOIs$chr_name), decreasing = FALSE), 
         #main = "Disease-associated SNPs per chromosome",
         main = "C",
@@ -1096,7 +1099,9 @@ barplot(height = sort(table(SOIs$chr_name), decreasing = FALSE),
         las = 1)
 #box()
 
-
+## Barplot with the distribution of SNPs in different types 
+## of genomic regions  ("consequence type")
+par(mar = c(5.1, 10.1, 3.1, 2.1))
 soi.df <- sort(table(SOIs$consequence_type_tv),  decreasing = FALSE)
 max.context <- length(soi.df)
 x <- barplot(height = soi.df,
@@ -1668,7 +1673,9 @@ par(mfrow = c(1,1))
 ```{r varscan_heatmap, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Heatmap of rSNPs predicted by variation-scan.** "), out.width = "100%", fig.width=10, fig.height=6}
 #varscan.jaspar.merged$best_pval <- -log10(varscan.jaspar.merged$best_pval)
 
-
+## JvH 2019-08-02: YVON, ce plot n'eest pas très informatif. 
+## Il pourrait éventuellement le deveenir si tu appliques le clustering
+## aux lignes (SNPs) et motifs (colonnes).
 ggplot(varscan.jaspar.merged, aes(label, var_id)) + geom_tile(aes(fill = -log10(best_pval)),
      colour = "white") + 
      labs(x='Motifs', y = 'SNPs')+
@@ -1678,6 +1685,7 @@ ggplot(varscan.jaspar.merged, aes(label, var_id)) + geom_tile(aes(fill = -log10(
       #theme(legend.position="none")+
       theme(plot.title = element_text(hjust = 0.5,size = 10),axis.title = element_text(size=15))+
       theme(axis.text.x = element_text(angle = 90, vjust = 1, hjust = 1),panel.grid.major= element_blank(),panel.grid.minor = element_blank())
+
 ```
 
 
